
	**************************************************
	*						 *
	*	       2.11 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.11.0 patched


NEW FEATURES

    o	R CMD INSTALL checks if dependent packages are available early on
	in the installation of source packages, thereby giving clearer
	error messages.


DEPRECATED & DEFUNCT

    o	Use of .C for C++ code in packages is now deprecated: it has
	caused problems for some 'make's on case-insensitive file
	systems (although it currently works with the recommended
	toolkits).


BUG FIXES

    o	The C function mkCharLenCE now no longer reads past 'len' bytes
	(unlikely to be a problem except in user code). (PR#14246)

    o	On systems without any default LD_LIBRARY_PATH (not even
	/usr/local/lib), [DY]LIB_LIBRARY_PATH is now set without a
	trailing colon.	 (PR#13637)

    o	More efficient utf8ToInt() on long multi-byte strings with
	many multi-byte characters.  (PR#14262)

    o	aggregate.ts() gave platform-depedent results due to rounding
	error for ndeltat != 1.

    o 	package.skeleton() sometimes failed to fix filenames for .R or
    	.Rd files to start with an alphanumeric.  (PR#14253)
	It also failed when only an S4 class without any methods was
	defined.  (PR#14280)

    o	splinefun(*, method = "monoH.FC")  was not quite monotone in rare
	cases.	(PR#14215)

    o	Rhttpd no longer crashes due to SIGPIPE when the client closes
	the connection prematurely.  (PR#14266)

    o	format.POSIXlt() could cause a stack overflow and crash when used on
    	very long vectors.  (PR#14267)

    o	Rd2latex() incorrectly escaped special characters in \usage sections.

    o	mcnemar.test() could alter the levels (dropping unused levels)
	if passed 'x' and 'y' as factors (reported by Greg Snow).

    o	Rd2pdf sometimes needed a further pdflatex pass to get
	hyperlinked pages correct.

    o	interaction() produced malformed results when levels were