@@ -15,6 +15,9 @@ NEW FEATURES
 	in the installation of source packages, thereby giving clearer
 	error messages.
 
+    o	R CMD INSTALL --build now names the file in the format used
+	for Mac OS X binary files on that platform.
+
 
 DEPRECATED & DEFUNCT
 
